--- a/css/main.scss
+++ b/css/main.scss
@@ -15,10 +15,11 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$background-color: #EDF4F7;
+$brand-color:      #A4CCDD;
 
-$grey-color:       #828282;
+//$grey-color:       #828282;
+$grey-color: darken($brand-color, 30%);
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
