--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,15 +6,24 @@
   <body>
     {% include ga.html %}
 
+    <!--
     {% include header.html %}
+    -->
 
     <div class="page-content">
       <div class="wrapper">
+        <div class="logo">
+          <img src="/img/r.svg">
+        </div>
+        <!--
         {{ content }}
+        -->
       </div>
     </div>
 
+    <!--
     {% include footer.html %}
+    -->
 
   </body>
 
